--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8081",
